Fix spacing of photoset list on albums index
This has bugged me forever and so I finally fixed it

--- a/web/assets/css/albums.css
+++ b/web/assets/css/albums.css
@@ -20,6 +20,7 @@
 .album-data {
   float: left;
   margin-left: 2em;
+  line-height: 1.65em;
 }
 
 @media screen and (max-width: 640px) {
